--- a/mod/area/wildnorth_wiz.git.yml
+++ b/mod/area/wildnorth_wiz.git.yml
@@ -512,7 +512,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -855,7 +855,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1198,7 +1198,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1541,7 +1541,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1870,7 +1870,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2213,7 +2213,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2556,7 +2556,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2865,7 +2865,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -3268,7 +3268,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 99}
+        Cost: {type: dword, value: 100}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -7201,7 +7201,7 @@ Door List:
     Appearance: {type: dword, value: 0}
     AutoRemoveKey: {type: byte, value: 0}
     Bearing: {type: float, value: -0.0}
-    CloseLockDC: {type: byte, value: 0}
+    CloseLockDC: {type: byte, value: 35}
     Conversation: {type: resref, value: ''}
     CurrentHP: {type: short, value: 15}
     Description:
@@ -7215,8 +7215,8 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: ''}
-    KeyRequired: {type: byte, value: 1}
+    KeyName: {type: cexostr, value: key_beschuppte_elfe}
+    KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: wildnorth_tavern_2_wildnorth}
     LinkedToFlags: {type: byte, value: 1}
     LoadScreenID: {type: word, value: 0}
@@ -7225,7 +7225,7 @@ Door List:
       str_ref: 14445
       value:
         0: Fancy Door 05l
-    Lockable: {type: byte, value: 0}
+    Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
@@ -7241,7 +7241,7 @@ Door List:
     OnTrapTriggered: {type: resref, value: door_traptrig}
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
-    OpenLockDC: {type: byte, value: 18}
+    OpenLockDC: {type: byte, value: 35}
     Plot: {type: byte, value: 0}
     PortraitId: {type: word, value: 558}
     Ref: {type: byte, value: 0}
@@ -7263,7 +7263,7 @@ Door List:
     Appearance: {type: dword, value: 0}
     AutoRemoveKey: {type: byte, value: 0}
     Bearing: {type: float, value: 1.5708}
-    CloseLockDC: {type: byte, value: 0}
+    CloseLockDC: {type: byte, value: 35}
     Conversation: {type: resref, value: ''}
     CurrentHP: {type: short, value: 15}
     Description:
@@ -7277,8 +7277,8 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: ''}
-    KeyRequired: {type: byte, value: 1}
+    KeyName: {type: cexostr, value: key_beschuppte_elfe}
+    KeyRequired: {type: byte, value: 0}
     LinkedTo: {type: cexostr, value: wildnorth_tavern2_2_wildnorth}
     LinkedToFlags: {type: byte, value: 1}
     LoadScreenID: {type: word, value: 0}
@@ -7287,7 +7287,7 @@ Door List:
       str_ref: 14445
       value:
         0: Fancy Door 05l
-    Lockable: {type: byte, value: 0}
+    Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
@@ -7303,7 +7303,7 @@ Door List:
     OnTrapTriggered: {type: resref, value: door_traptrig}
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
-    OpenLockDC: {type: byte, value: 18}
+    OpenLockDC: {type: byte, value: 35}
     Plot: {type: byte, value: 0}
     PortraitId: {type: word, value: 558}
     Ref: {type: byte, value: 0}
