--- a/mod/area/gabel_bordell.are.yml
+++ b/mod/area/gabel_bordell.are.yml
@@ -21,7 +21,7 @@ ModListenCheck: {type: int, value: 0}
 ModSpotCheck: {type: int, value: 0}
 MoonAmbientColor: {type: dword, value: 2960685}
 MoonDiffuseColor: {type: dword, value: 6457991}
-MoonFogAmount: {type: byte, value: 5}
+MoonFogAmount: {type: byte, value: 10}
 MoonFogColor: {type: dword, value: 0}
 MoonShadows: {type: byte, value: 0}
 Name:
@@ -42,7 +42,7 @@ SunDiffuseColor: {type: dword, value: 0}
 SunFogAmount: {type: byte, value: 0}
 SunFogColor: {type: dword, value: 0}
 SunShadows: {type: byte, value: 0}
-Tag: {type: cexostr, value: Gebiet003}
+Tag: {type: cexostr, value: gabel_bordell}
 Tile_List:
   type: list
   value:
@@ -237,19 +237,19 @@ Tile_List:
     Tile_MainLight2: {type: byte, value: 25}
     Tile_Orientation: {type: int, value: 0}
     Tile_SrcLight1: {type: byte, value: 12}
-    Tile_SrcLight2: {type: byte, value: 12}
+    Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 0}
-    Tile_AnimLoop2: {type: byte, value: 0}
-    Tile_AnimLoop3: {type: byte, value: 0}
+    Tile_AnimLoop1: {type: byte, value: 1}
+    Tile_AnimLoop2: {type: byte, value: 1}
+    Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 94}
-    Tile_MainLight1: {type: byte, value: 25}
-    Tile_MainLight2: {type: byte, value: 25}
+    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
-    Tile_SrcLight1: {type: byte, value: 12}
-    Tile_SrcLight2: {type: byte, value: 12}
+    Tile_SrcLight1: {type: byte, value: 0}
+    Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     Tile_AnimLoop1: {type: byte, value: 0}
@@ -348,40 +348,40 @@ Tile_List:
     Tile_SrcLight2: {type: byte, value: 12}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 0}
-    Tile_AnimLoop2: {type: byte, value: 0}
-    Tile_AnimLoop3: {type: byte, value: 0}
+    Tile_AnimLoop1: {type: byte, value: 1}
+    Tile_AnimLoop2: {type: byte, value: 1}
+    Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 197}
-    Tile_MainLight1: {type: byte, value: 25}
-    Tile_MainLight2: {type: byte, value: 25}
+    Tile_ID: {type: int, value: 3}
+    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight2: {type: byte, value: 0}
     Tile_Orientation: {type: int, value: 2}
-    Tile_SrcLight1: {type: byte, value: 12}
-    Tile_SrcLight2: {type: byte, value: 12}
+    Tile_SrcLight1: {type: byte, value: 0}
+    Tile_SrcLight2: {type: byte, value: 0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     Tile_AnimLoop1: {type: byte, value: 0}
     Tile_AnimLoop2: {type: byte, value: 0}
     Tile_AnimLoop3: {type: byte, value: 0}
     Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 204}
-    Tile_MainLight1: {type: byte, value: 25}
-    Tile_MainLight2: {type: byte, value: 25}
-    Tile_Orientation: {type: int, value: 2}
-    Tile_SrcLight1: {type: byte, value: 12}
-    Tile_SrcLight2: {type: byte, value: 12}
-  - !nwn-lib.elv.es,2013-07:struct
-    __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 0}
-    Tile_AnimLoop2: {type: byte, value: 0}
-    Tile_AnimLoop3: {type: byte, value: 0}
-    Tile_Height: {type: int, value: 0}
-    Tile_ID: {type: int, value: 94}
+    Tile_ID: {type: int, value: 8}
     Tile_MainLight1: {type: byte, value: 25}
     Tile_MainLight2: {type: byte, value: 25}
     Tile_Orientation: {type: int, value: 3}
     Tile_SrcLight1: {type: byte, value: 12}
     Tile_SrcLight2: {type: byte, value: 12}
+  - !nwn-lib.elv.es,2013-07:struct
+    __struct_id: 1
+    Tile_AnimLoop1: {type: byte, value: 1}
+    Tile_AnimLoop2: {type: byte, value: 1}
+    Tile_AnimLoop3: {type: byte, value: 1}
+    Tile_Height: {type: int, value: 0}
+    Tile_ID: {type: int, value: 204}
+    Tile_MainLight1: {type: byte, value: 30}
+    Tile_MainLight2: {type: byte, value: 13}
+    Tile_Orientation: {type: int, value: 2}
+    Tile_SrcLight1: {type: byte, value: 3}
+    Tile_SrcLight2: {type: byte, value: 3}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     Tile_AnimLoop1: {type: byte, value: 0}
@@ -480,16 +480,16 @@ Tile_List:
     Tile_SrcLight2: {type: byte, value: 12}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 0}
-    Tile_AnimLoop2: {type: byte, value: 0}
-    Tile_AnimLoop3: {type: byte, value: 0}
+    Tile_AnimLoop1: {type: byte, value: 1}
+    Tile_AnimLoop2: {type: byte, value: 1}
+    Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 94}
-    Tile_MainLight1: {type: byte, value: 25}
-    Tile_MainLight2: {type: byte, value: 25}
-    Tile_Orientation: {type: int, value: 0}
-    Tile_SrcLight1: {type: byte, value: 12}
-    Tile_SrcLight2: {type: byte, value: 12}
+    Tile_MainLight1: {type: byte, value: 0}
+    Tile_MainLight2: {type: byte, value: 0}
+    Tile_Orientation: {type: int, value: 1}
+    Tile_SrcLight1: {type: byte, value: 3}
+    Tile_SrcLight2: {type: byte, value: 3}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     Tile_AnimLoop1: {type: byte, value: 0}
@@ -600,16 +600,16 @@ Tile_List:
     Tile_SrcLight2: {type: byte, value: 12}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
-    Tile_AnimLoop1: {type: byte, value: 0}
-    Tile_AnimLoop2: {type: byte, value: 0}
-    Tile_AnimLoop3: {type: byte, value: 0}
+    Tile_AnimLoop1: {type: byte, value: 1}
+    Tile_AnimLoop2: {type: byte, value: 1}
+    Tile_AnimLoop3: {type: byte, value: 1}
     Tile_Height: {type: int, value: 0}
     Tile_ID: {type: int, value: 94}
-    Tile_MainLight1: {type: byte, value: 25}
-    Tile_MainLight2: {type: byte, value: 25}
-    Tile_Orientation: {type: int, value: 2}
-    Tile_SrcLight1: {type: byte, value: 12}
-    Tile_SrcLight2: {type: byte, value: 12}
+    Tile_MainLight1: {type: byte, value: 30}
+    Tile_MainLight2: {type: byte, value: 0}
+    Tile_Orientation: {type: int, value: 1}
+    Tile_SrcLight1: {type: byte, value: 3}
+    Tile_SrcLight2: {type: byte, value: 3}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     Tile_AnimLoop1: {type: byte, value: 0}
