wildnorth tavern: fix AT to terrace

--- a/mod/area/wildnorth_tavern.git.yml
+++ b/mod/area/wildnorth_tavern.git.yml
@@ -598,7 +598,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 495}
+        Cost: {type: dword, value: 494}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -660,7 +660,7 @@ Creature List:
         AddCost: {type: dword, value: 1}
         BaseItem: {type: int, value: 15}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 14}
+        Cost: {type: dword, value: 13}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2183,7 +2183,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2528,7 +2528,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2873,7 +2873,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -3236,7 +3236,7 @@ Door List:
     Appearance: {type: dword, value: 0}
     AutoRemoveKey: {type: byte, value: 0}
     Bearing: {type: float, value: -0.0}
-    CloseLockDC: {type: byte, value: 0}
+    CloseLockDC: {type: byte, value: 35}
     Conversation: {type: resref, value: ''}
     CurrentHP: {type: short, value: 15}
     Description:
@@ -3250,18 +3250,18 @@ Door List:
     HP: {type: short, value: 15}
     Hardness: {type: byte, value: 5}
     Interruptable: {type: byte, value: 1}
-    KeyName: {type: cexostr, value: ''}
-    KeyRequired: {type: byte, value: 1}
-    LinkedTo: {type: cexostr, value: ''}
-    LinkedToFlags: {type: byte, value: 0}
+    KeyName: {type: cexostr, value: key_beschuppte_elfe}
+    KeyRequired: {type: byte, value: 0}
+    LinkedTo: {type: cexostr, value: wildnorth_2_wildnorth_tavern3}
+    LinkedToFlags: {type: byte, value: 1}
     LoadScreenID: {type: word, value: 0}
     LocName:
       type: cexolocstr
       str_ref: 14445
       value:
         0: Fancy Door 05l
-    Lockable: {type: byte, value: 0}
-    Locked: {type: byte, value: 1}
+    Lockable: {type: byte, value: 1}
+    Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: door_click}
     OnClosed: {type: resref, value: door_closed}
     OnDamaged: {type: resref, value: door_damaged}
@@ -3276,11 +3276,11 @@ Door List:
     OnTrapTriggered: {type: resref, value: door_traptrig}
     OnUnlock: {type: resref, value: door_unlock}
     OnUserDefined: {type: resref, value: ''}
-    OpenLockDC: {type: byte, value: 18}
+    OpenLockDC: {type: byte, value: 35}
     Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 558}
     Ref: {type: byte, value: 0}
-    Tag: {type: cexostr, value: CTP_FancyDoor_05l}
+    Tag: {type: cexostr, value: wildnorth_tavern3_2_wildnorth}
     TemplateResRef: {type: resref, value: ctp_door_05l}
     TrapDetectDC: {type: byte, value: 0}
     TrapDetectable: {type: byte, value: 1}
