Turm Lekysh: minor interior updates

--- a/mod/area/wildnorth_wiz.git.yml
+++ b/mod/area/wildnorth_wiz.git.yml
@@ -512,7 +512,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -855,7 +855,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1198,7 +1198,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1541,7 +1541,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -1870,7 +1870,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2213,7 +2213,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2556,7 +2556,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -2865,7 +2865,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -3268,7 +3268,7 @@ Creature List:
         AddCost: {type: dword, value: 0}
         BaseItem: {type: int, value: 20}
         Charges: {type: byte, value: 0}
-        Cost: {type: dword, value: 100}
+        Cost: {type: dword, value: 99}
         Cursed: {type: byte, value: 0}
         DescIdentified:
           type: cexolocstr
@@ -56138,7 +56138,7 @@ Placeable List:
     LocName:
       type: cexolocstr
       value:
-        0: Chair_3
+        0: Holzstuhl
     Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -56200,7 +56200,7 @@ Placeable List:
     LocName:
       type: cexolocstr
       value:
-        0: Chair_3
+        0: Holzstuhl
     Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -56262,7 +56262,7 @@ Placeable List:
     LocName:
       type: cexolocstr
       value:
-        0: Chair_3
+        0: Holzstuhl
     Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -56324,7 +56324,7 @@ Placeable List:
     LocName:
       type: cexolocstr
       value:
-        0: Chair_3
+        0: Holzstuhl
     Lockable: {type: byte, value: 1}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -69158,7 +69158,7 @@ Placeable List:
       type: cexolocstr
       str_ref: 68832
       value:
-        0: Chair - Wrought iron
+        0: Stuhl aus Gusseisen
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -69177,10 +69177,10 @@ Placeable List:
     OnUsed: {type: resref, value: _ou_sittable}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
-    Static: {type: byte, value: 1}
+    Static: {type: byte, value: 0}
     Tag: {type: cexostr, value: ZEP_CI_CHR_005}
     TemplateResRef: {type: resref, value: zep_ci_chr_005}
     TrapDetectDC: {type: byte, value: 0}
@@ -69190,7 +69190,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 170.4512}
     Y: {type: float, value: 173.0195}
@@ -69223,7 +69223,7 @@ Placeable List:
       type: cexolocstr
       str_ref: 68832
       value:
-        0: Chair - Wrought iron
+        0: Stuhl aus Gusseisen
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -69242,10 +69242,10 @@ Placeable List:
     OnUsed: {type: resref, value: _ou_sittable}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
-    Static: {type: byte, value: 1}
+    Static: {type: byte, value: 0}
     Tag: {type: cexostr, value: ZEP_CI_CHR_005}
     TemplateResRef: {type: resref, value: zep_ci_chr_005}
     TrapDetectDC: {type: byte, value: 0}
@@ -69255,7 +69255,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 170.5852}
     Y: {type: float, value: 174.0531}
@@ -69288,7 +69288,7 @@ Placeable List:
       type: cexolocstr
       str_ref: 68832
       value:
-        0: Chair - Wrought iron
+        0: Stuhl aus Gusseisen
     Lockable: {type: byte, value: 0}
     Locked: {type: byte, value: 0}
     OnClick: {type: resref, value: ''}
@@ -69307,10 +69307,10 @@ Placeable List:
     OnUsed: {type: resref, value: _ou_sittable}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 18}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
-    Static: {type: byte, value: 1}
+    Static: {type: byte, value: 0}
     Tag: {type: cexostr, value: ZEP_CI_CHR_005}
     TemplateResRef: {type: resref, value: zep_ci_chr_005}
     TrapDetectDC: {type: byte, value: 0}
@@ -69320,7 +69320,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 172.8689}
     Y: {type: float, value: 173.026}
