--- a/mod/area/aw_twrlekysh.git.yml
+++ b/mod/area/aw_twrlekysh.git.yml
@@ -1969,9 +1969,9 @@ Placeable List:
     Type: {type: byte, value: 0}
     Useable: {type: byte, value: 0}
     Will: {type: byte, value: 0}
-    X: {type: float, value: 38.0572}
-    Y: {type: float, value: 11.4798}
-    Z: {type: float, value: -0.0}
+    X: {type: float, value: 38.27}
+    Y: {type: float, value: 11.15}
+    Z: {type: float, value: 0.0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 9
     AnimationState: {type: byte, value: 0}
@@ -3406,7 +3406,7 @@ Placeable List:
     Useable: {type: byte, value: 0}
     Will: {type: byte, value: 0}
     X: {type: float, value: 38.15}
-    Y: {type: float, value: 11.27}
+    Y: {type: float, value: 11.25}
     Z: {type: float, value: 0.1}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 9
@@ -6192,9 +6192,9 @@ Placeable List:
     Type: {type: byte, value: 0}
     Useable: {type: byte, value: 0}
     Will: {type: byte, value: 0}
-    X: {type: float, value: 55.5199}
-    Y: {type: float, value: 28.8728}
-    Z: {type: float, value: 1.6881}
+    X: {type: float, value: 55.52}
+    Y: {type: float, value: 29.0}
+    Z: {type: float, value: 1.64}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 9
     AnimationState: {type: byte, value: 0}
@@ -19886,7 +19886,7 @@ Placeable List:
     Will: {type: byte, value: 0}
     X: {type: float, value: 120.44}
     Y: {type: float, value: 59.67}
-    Z: {type: float, value: -4.3}
+    Z: {type: float, value: -4.45}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 9
     AnimationState: {type: byte, value: 0}
@@ -21314,7 +21314,7 @@ Placeable List:
     OnUsed: {type: resref, value: _ou_sittable}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 0}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
     Static: {type: byte, value: 0}
@@ -21327,7 +21327,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 126.4562}
     Y: {type: float, value: 52.0304}
@@ -21376,7 +21376,7 @@ Placeable List:
     OnUsed: {type: resref, value: _ou_sittable}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 0}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
     Static: {type: byte, value: 0}
@@ -21389,7 +21389,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 123.4648}
     Y: {type: float, value: 52.5904}
@@ -21438,7 +21438,7 @@ Placeable List:
     OnUsed: {type: resref, value: _ou_sittable}
     OnUserDefined: {type: resref, value: ''}
     OpenLockDC: {type: byte, value: 0}
-    Plot: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
     PortraitId: {type: word, value: 0}
     Ref: {type: byte, value: 0}
     Static: {type: byte, value: 0}
@@ -21451,7 +21451,7 @@ Placeable List:
     TrapOneShot: {type: byte, value: 1}
     TrapType: {type: byte, value: 0}
     Type: {type: byte, value: 0}
-    Useable: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
     Will: {type: byte, value: 0}
     X: {type: float, value: 123.4848}
     Y: {type: float, value: 51.4351}
@@ -23495,6 +23495,132 @@ Placeable List:
     X: {type: float, value: 122.0228}
     Y: {type: float, value: 51.41}
     Z: {type: float, value: -0.0}
+  - !nwn-lib.elv.es,2013-07:struct
+    __struct_id: 9
+    AnimationState: {type: byte, value: 0}
+    Appearance: {type: dword, value: 157}
+    AutoRemoveKey: {type: byte, value: 0}
+    Bearing: {type: float, value: 2.3317}
+    BodyBag: {type: byte, value: 0}
+    CloseLockDC: {type: byte, value: 0}
+    Conversation: {type: resref, value: ''}
+    CurrentHP: {type: short, value: 10}
+    Description:
+      type: cexolocstr
+      value:
+        4: ''
+    DisarmDC: {type: byte, value: 0}
+    Faction: {type: dword, value: 1}
+    Fort: {type: byte, value: 5}
+    HP: {type: short, value: 10}
+    Hardness: {type: byte, value: 5}
+    HasInventory: {type: byte, value: 0}
+    Interruptable: {type: byte, value: 1}
+    KeyName: {type: cexostr, value: ''}
+    KeyRequired: {type: byte, value: 0}
+    LocName:
+      type: cexolocstr
+      value:
+        0: Kletter
+    Lockable: {type: byte, value: 1}
+    Locked: {type: byte, value: 0}
+    OnClick: {type: resref, value: ''}
+    OnClosed: {type: resref, value: ''}
+    OnDamaged: {type: resref, value: ''}
+    OnDeath: {type: resref, value: ''}
+    OnDisarm: {type: resref, value: ''}
+    OnHeartbeat: {type: resref, value: ''}
+    OnInvDisturbed: {type: resref, value: ''}
+    OnLock: {type: resref, value: ''}
+    OnMeleeAttacked: {type: resref, value: ''}
+    OnOpen: {type: resref, value: ''}
+    OnSpellCastAt: {type: resref, value: ''}
+    OnTrapTriggered: {type: resref, value: ''}
+    OnUnlock: {type: resref, value: ''}
+    OnUsed: {type: resref, value: _ou_jump}
+    OnUserDefined: {type: resref, value: ''}
+    OpenLockDC: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
+    PortraitId: {type: word, value: 515}
+    Ref: {type: byte, value: 0}
+    Static: {type: byte, value: 0}
+    Tag: {type: cexostr, value: pclimb}
+    TemplateResRef: {type: resref, value: pclimb}
+    TrapDetectDC: {type: byte, value: 0}
+    TrapDetectable: {type: byte, value: 1}
+    TrapDisarmable: {type: byte, value: 1}
+    TrapFlag: {type: byte, value: 0}
+    TrapOneShot: {type: byte, value: 1}
+    TrapType: {type: byte, value: 0}
+    Type: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
+    Will: {type: byte, value: 0}
+    X: {type: float, value: 134.0473}
+    Y: {type: float, value: 66.6833}
+    Z: {type: float, value: -0.0}
+  - !nwn-lib.elv.es,2013-07:struct
+    __struct_id: 9
+    AnimationState: {type: byte, value: 0}
+    Appearance: {type: dword, value: 157}
+    AutoRemoveKey: {type: byte, value: 0}
+    Bearing: {type: float, value: -0.8836}
+    BodyBag: {type: byte, value: 0}
+    CloseLockDC: {type: byte, value: 0}
+    Conversation: {type: resref, value: ''}
+    CurrentHP: {type: short, value: 10}
+    Description:
+      type: cexolocstr
+      value:
+        4: ''
+    DisarmDC: {type: byte, value: 0}
+    Faction: {type: dword, value: 1}
+    Fort: {type: byte, value: 5}
+    HP: {type: short, value: 10}
+    Hardness: {type: byte, value: 5}
+    HasInventory: {type: byte, value: 0}
+    Interruptable: {type: byte, value: 1}
+    KeyName: {type: cexostr, value: ''}
+    KeyRequired: {type: byte, value: 0}
+    LocName:
+      type: cexolocstr
+      value:
+        0: Kletter
+    Lockable: {type: byte, value: 1}
+    Locked: {type: byte, value: 0}
+    OnClick: {type: resref, value: ''}
+    OnClosed: {type: resref, value: ''}
+    OnDamaged: {type: resref, value: ''}
+    OnDeath: {type: resref, value: ''}
+    OnDisarm: {type: resref, value: ''}
+    OnHeartbeat: {type: resref, value: ''}
+    OnInvDisturbed: {type: resref, value: ''}
+    OnLock: {type: resref, value: ''}
+    OnMeleeAttacked: {type: resref, value: ''}
+    OnOpen: {type: resref, value: ''}
+    OnSpellCastAt: {type: resref, value: ''}
+    OnTrapTriggered: {type: resref, value: ''}
+    OnUnlock: {type: resref, value: ''}
+    OnUsed: {type: resref, value: _ou_jump}
+    OnUserDefined: {type: resref, value: ''}
+    OpenLockDC: {type: byte, value: 0}
+    Plot: {type: byte, value: 1}
+    PortraitId: {type: word, value: 515}
+    Ref: {type: byte, value: 0}
+    Static: {type: byte, value: 0}
+    Tag: {type: cexostr, value: pclimb}
+    TemplateResRef: {type: resref, value: pclimb}
+    TrapDetectDC: {type: byte, value: 0}
+    TrapDetectable: {type: byte, value: 1}
+    TrapDisarmable: {type: byte, value: 1}
+    TrapFlag: {type: byte, value: 0}
+    TrapOneShot: {type: byte, value: 1}
+    TrapType: {type: byte, value: 0}
+    Type: {type: byte, value: 0}
+    Useable: {type: byte, value: 1}
+    Will: {type: byte, value: 0}
+    X: {type: float, value: 132.0722}
+    Y: {type: float, value: 64.8722}
+    Z: {type: float, value: -4.4922}
 SoundList:
   type: list
   value: []
@@ -23504,135 +23630,6 @@ StoreList:
 TriggerList:
   type: list
   value:
-  - !nwn-lib.elv.es,2013-07:struct
-    __struct_id: 1
-    AutoRemoveKey: {type: byte, value: 0}
-    Cursor: {type: byte, value: 1}
-    DisarmDC: {type: byte, value: 0}
-    Faction: {type: dword, value: 1}
-    Geometry:
-      type: list
-      value:
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: -0.4377}
-        PointY: {type: float, value: -0.4022}
-        PointZ: {type: float, value: -4.475}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.3667}
-        PointY: {type: float, value: -1.1947}
-        PointZ: {type: float, value: -4.475}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.8398}
-        PointY: {type: float, value: -0.7689}
-        PointZ: {type: float, value: -4.475}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.0}
-        PointY: {type: float, value: 0.0}
-        PointZ: {type: float, value: -4.475}
-    HighlightHeight: {type: float, value: 0.0}
-    KeyName: {type: cexostr, value: ''}
-    LinkedTo: {type: cexostr, value: wp_twrlekysh_o3_in2}
-    LinkedToFlags: {type: byte, value: 2}
-    LoadScreenID: {type: word, value: 0}
-    LocalizedName:
-      type: cexolocstr
-      str_ref: 14760
-      value:
-        0: twrlekysh_o3_in1
-    OnClick: {type: resref, value: ''}
-    OnDisarm: {type: resref, value: ''}
-    OnTrapTriggered: {type: resref, value: ''}
-    PortraitId: {type: word, value: 0}
-    ScriptHeartbeat: {type: resref, value: ''}
-    ScriptOnEnter: {type: resref, value: ''}
-    ScriptOnExit: {type: resref, value: ''}
-    ScriptUserDefine: {type: resref, value: ''}
-    Tag: {type: cexostr, value: twrlekysh_o3_in1}
-    TemplateResRef: {type: resref, value: newtransition}
-    TrapDetectDC: {type: byte, value: 0}
-    TrapDetectable: {type: byte, value: 1}
-    TrapDisarmable: {type: byte, value: 1}
-    TrapFlag: {type: byte, value: 0}
-    TrapOneShot: {type: byte, value: 1}
-    TrapType: {type: byte, value: 0}
-    Type: {type: int, value: 1}
-    XOrientation: {type: float, value: 0.0}
-    XPosition: {type: float, value: 131.8891}
-    YOrientation: {type: float, value: 0.0}
-    YPosition: {type: float, value: 65.278}
-    ZOrientation: {type: float, value: 0.0}
-    ZPosition: {type: float, value: 0.0}
-  - !nwn-lib.elv.es,2013-07:struct
-    __struct_id: 1
-    AutoRemoveKey: {type: byte, value: 0}
-    Cursor: {type: byte, value: 1}
-    DisarmDC: {type: byte, value: 0}
-    Faction: {type: dword, value: 1}
-    Geometry:
-      type: list
-      value:
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.0}
-        PointY: {type: float, value: 0.0}
-        PointZ: {type: float, value: 0.025}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.0218}
-        PointY: {type: float, value: -0.0073}
-        PointZ: {type: float, value: 0.025}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.5881}
-        PointY: {type: float, value: -0.559}
-        PointZ: {type: float, value: 0.025}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.864}
-        PointY: {type: float, value: -0.3049}
-        PointZ: {type: float, value: 0.025}
-      - !nwn-lib.elv.es,2013-07:struct
-        __struct_id: 3
-        PointX: {type: float, value: 0.334}
-        PointY: {type: float, value: 0.2977}
-        PointZ: {type: float, value: 0.025}
-    HighlightHeight: {type: float, value: 0.0}
-    KeyName: {type: cexostr, value: ''}
-    LinkedTo: {type: cexostr, value: wp_twrlekysh_o3_in1}
-    LinkedToFlags: {type: byte, value: 2}
-    LoadScreenID: {type: word, value: 0}
-    LocalizedName:
-      type: cexolocstr
-      str_ref: 14760
-      value:
-        0: twrlekysh_o3_in2
-    OnClick: {type: resref, value: ''}
-    OnDisarm: {type: resref, value: ''}
-    OnTrapTriggered: {type: resref, value: ''}
-    PortraitId: {type: word, value: 0}
-    ScriptHeartbeat: {type: resref, value: ''}
-    ScriptOnEnter: {type: resref, value: ''}
-    ScriptOnExit: {type: resref, value: ''}
-    ScriptUserDefine: {type: resref, value: ''}
-    Tag: {type: cexostr, value: twrlekysh_o3_in2}
-    TemplateResRef: {type: resref, value: newtransition}
-    TrapDetectDC: {type: byte, value: 0}
-    TrapDetectable: {type: byte, value: 1}
-    TrapDisarmable: {type: byte, value: 1}
-    TrapFlag: {type: byte, value: 0}
-    TrapOneShot: {type: byte, value: 1}
-    TrapType: {type: byte, value: 0}
-    Type: {type: int, value: 1}
-    XOrientation: {type: float, value: 0.0}
-    XPosition: {type: float, value: 133.4257}
-    YOrientation: {type: float, value: 0.0}
-    YPosition: {type: float, value: 66.6414}
-    ZOrientation: {type: float, value: 0.0}
-    ZPosition: {type: float, value: 0.0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 1
     AutoRemoveKey: {type: byte, value: 0}
@@ -23703,50 +23700,6 @@ TriggerList:
 WaypointList:
   type: list
   value:
-  - !nwn-lib.elv.es,2013-07:struct
-    __struct_id: 5
-    Appearance: {type: byte, value: 1}
-    Description:
-      type: cexolocstr
-      value: {}
-    HasMapNote: {type: byte, value: 0}
-    LinkedTo: {type: cexostr, value: ''}
-    LocalizedName:
-      type: cexolocstr
-      value: {}
-    MapNote:
-      type: cexolocstr
-      value: {}
-    MapNoteEnabled: {type: byte, value: 0}
-    Tag: {type: cexostr, value: wp_twrlekysh_o3_in1}
-    TemplateResRef: {type: resref, value: ''}
-    XOrientation: {type: float, value: -0.4276}
-    XPosition: {type: float, value: 132.0074}
-    YOrientation: {type: float, value: -0.904}
-    YPosition: {type: float, value: 64.5506}
-    ZPosition: {type: float, value: -4.5}
-  - !nwn-lib.elv.es,2013-07:struct
-    __struct_id: 5
-    Appearance: {type: byte, value: 1}
-    Description:
-      type: cexolocstr
-      value: {}
-    HasMapNote: {type: byte, value: 0}
-    LinkedTo: {type: cexostr, value: ''}
-    LocalizedName:
-      type: cexolocstr
-      value: {}
-    MapNote:
-      type: cexolocstr
-      value: {}
-    MapNoteEnabled: {type: byte, value: 0}
-    Tag: {type: cexostr, value: WP_twrlekysh_o3_in2}
-    TemplateResRef: {type: resref, value: ''}
-    XOrientation: {type: float, value: 0.773}
-    XPosition: {type: float, value: 134.0247}
-    YOrientation: {type: float, value: 0.6344}
-    YPosition: {type: float, value: 66.6704}
-    ZPosition: {type: float, value: -0.0}
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 5
     Appearance: {type: byte, value: 1}
