Animate Dead: reworked undead templates

--- a/mod/utc/skel_large.utc.yml
+++ b/mod/utc/skel_large.utc.yml
@@ -1,7 +1,7 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 63}
+Appearance_Type: {type: word, value: 1317}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: 0}
 Cha: {type: byte, value: 3}
@@ -42,7 +42,7 @@ FeatList:
 FirstName:
   type: cexolocstr
   value:
-    0: Skelett
+    0: Grosses Skelett
 Gender: {type: byte, value: 4}
 GoodEvil: {type: byte, value: 0}
 HitPoints: {type: short, value: 24}
@@ -109,21 +109,22 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
 SoundSetFile: {type: word, value: 79}
 SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 14}
+Str: {type: byte, value: 21}
 Subrace: {type: cexostr, value: ''}
 Tag: {type: cexostr, value: skel_large}
-Tail: {type: byte, value: 0}
+Tail_New: {type: dword, value: 272}
 TemplateList:
   type: list
   value: []
 TemplateResRef: {type: resref, value: skel_large}
-WalkRate: {type: int, value: 7}
-Wings: {type: byte, value: 0}
+WalkRate: {type: int, value: 5}
+Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
 refbonus: {type: short, value: 0}
