--- a/mod/utc/skel_medium.utc.yml
+++ b/mod/utc/skel_medium.utc.yml
@@ -22,7 +22,7 @@ Deity: {type: cexostr, value: ''}
 Description:
   type: cexolocstr
   value: {}
-Dex: {type: byte, value: 12}
+Dex: {type: byte, value: 13}
 Disarmable: {type: byte, value: 1}
 Equip_ItemList:
   type: list
@@ -109,21 +109,22 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
 SoundSetFile: {type: word, value: 79}
 SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 10}
+Str: {type: byte, value: 14}
 Subrace: {type: cexostr, value: ''}
 Tag: {type: cexostr, value: skel_medium}
-Tail: {type: byte, value: 0}
+Tail_New: {type: dword, value: 0}
 TemplateList:
   type: list
   value: []
 TemplateResRef: {type: resref, value: skel_medium}
 WalkRate: {type: int, value: 4}
-Wings: {type: byte, value: 0}
+Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
 refbonus: {type: short, value: 0}
