--- a/mod/utc/skel_huge.utc.yml
+++ b/mod/utc/skel_huge.utc.yml
@@ -1,11 +1,11 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 63}
+Appearance_Type: {type: word, value: 1322}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: -1}
 Cha: {type: byte, value: 3}
-ChallengeRating: {type: float, value: 3.0}
+ChallengeRating: {type: float, value: 4.0}
 ClassList:
   type: list
   value:
@@ -22,7 +22,7 @@ Deity: {type: cexostr, value: ''}
 Description:
   type: cexolocstr
   value: {}
-Dex: {type: byte, value: 12}
+Dex: {type: byte, value: 10}
 Disarmable: {type: byte, value: 1}
 Equip_ItemList:
   type: list
@@ -42,7 +42,7 @@ FeatList:
 FirstName:
   type: cexolocstr
   value:
-    0: Skelett
+    0: Riesiges Skelett
 Gender: {type: byte, value: 4}
 GoodEvil: {type: byte, value: 0}
 HitPoints: {type: short, value: 48}
@@ -57,7 +57,7 @@ LastName:
 LawfulChaotic: {type: byte, value: 50}
 Lootable: {type: byte, value: 0}
 MaxHitPoints: {type: short, value: 48}
-NaturalAC: {type: byte, value: 2}
+NaturalAC: {type: byte, value: 3}
 NoPermDeath: {type: byte, value: 1}
 PaletteID: {type: byte, value: 31}
 PerceptionRange: {type: byte, value: 11}
@@ -84,14 +84,15 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 5}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 7}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 4}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -114,16 +115,16 @@ SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 18}
+Str: {type: byte, value: 25}
 Subrace: {type: cexostr, value: ''}
 Tag: {type: cexostr, value: skel_huge}
-Tail: {type: byte, value: 0}
+Tail_New: {type: dword, value: 278}
 TemplateList:
   type: list
   value: []
 TemplateResRef: {type: resref, value: skel_huge}
-WalkRate: {type: int, value: 7}
-Wings: {type: byte, value: 0}
+WalkRate: {type: int, value: 5}
+Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
 refbonus: {type: short, value: 0}
