--- a/mod/utc/skel_huge_war.utc.yml
+++ b/mod/utc/skel_huge_war.utc.yml
@@ -1,7 +1,7 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 63}
+Appearance_Type: {type: word, value: 1322}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: -1}
 Cha: {type: byte, value: 3}
@@ -22,7 +22,7 @@ Deity: {type: cexostr, value: ''}
 Description:
   type: cexolocstr
   value: {}
-Dex: {type: byte, value: 12}
+Dex: {type: byte, value: 10}
 Disarmable: {type: byte, value: 1}
 Equip_ItemList:
   type: list
@@ -48,7 +48,7 @@ FeatList:
 FirstName:
   type: cexolocstr
   value:
-    0: Skelettkrieger
+    0: Riesiger Skelettkrieger
 Gender: {type: byte, value: 4}
 GoodEvil: {type: byte, value: 0}
 HitPoints: {type: short, value: 48}
@@ -63,13 +63,13 @@ LastName:
 LawfulChaotic: {type: byte, value: 50}
 Lootable: {type: byte, value: 0}
 MaxHitPoints: {type: short, value: 48}
-NaturalAC: {type: byte, value: 2}
+NaturalAC: {type: byte, value: 3}
 NoPermDeath: {type: byte, value: 1}
 PaletteID: {type: byte, value: 31}
 PerceptionRange: {type: byte, value: 11}
 Phenotype: {type: int, value: 0}
 Plot: {type: byte, value: 0}
-PortraitId: {type: word, value: 289}
+PortraitId: {type: word, value: 288}
 Race: {type: byte, value: 24}
 ScriptAttacked: {type: resref, value: x2_def_attacked}
 ScriptDamaged: {type: resref, value: x2_def_ondamage}
@@ -90,14 +90,15 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 5}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 7}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 4}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -120,16 +121,16 @@ SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 18}
+Str: {type: byte, value: 25}
 Subrace: {type: cexostr, value: ''}
 Tag: {type: cexostr, value: skel_huge_war}
-Tail: {type: byte, value: 0}
+Tail_New: {type: dword, value: 273}
 TemplateList:
   type: list
   value: []
 TemplateResRef: {type: resref, value: skel_huge_war}
-WalkRate: {type: int, value: 7}
-Wings: {type: byte, value: 0}
+WalkRate: {type: int, value: 5}
+Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
 refbonus: {type: short, value: 0}
