--- a/mod/utc/skel_med_ar.utc.yml
+++ b/mod/utc/skel_med_ar.utc.yml
@@ -1,22 +1,22 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 1317}
+Appearance_Type: {type: word, value: 63}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: 1}
 Cha: {type: byte, value: 3}
-ChallengeRating: {type: float, value: 4.0}
+ChallengeRating: {type: float, value: 2.0}
 ClassList:
   type: list
   value:
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 2
     Class: {type: int, value: 19}
-    ClassLevel: {type: short, value: 2}
+    ClassLevel: {type: short, value: 1}
 Comment: {type: cexostr, value: ''}
 Con: {type: byte, value: 10}
 Conversation: {type: resref, value: ''}
-CurrentHitPoints: {type: short, value: 24}
+CurrentHitPoints: {type: short, value: 12}
 DecayTime: {type: dword, value: 5000}
 Deity: {type: cexostr, value: ''}
 Description:
@@ -27,13 +27,13 @@ Disarmable: {type: byte, value: 1}
 Equip_ItemList:
   type: list
   value:
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 2, EquippedRes: {type: resref, value: lederruestung012}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16, EquippedRes: {type: resref, value: krummsaeb004}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32, EquippedRes: {type: resref, value: grosserschild032}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16, EquippedRes: {type: resref, value: nw_wbwln001}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 2048, EquippedRes: {type: resref,
+      value: nw_wamar001}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16384, EquippedRes: {type: resref,
-      value: nw_it_crewpsp005}}
+      value: nw_it_crewpsp026}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32768, EquippedRes: {type: resref,
-      value: nw_it_crewpsp005}}
+      value: nw_it_crewpsp026}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 131072, EquippedRes: {type: resref,
       value: it_creitemune001}}
 FactionID: {type: word, value: 1}
@@ -48,10 +48,10 @@ FeatList:
 FirstName:
   type: cexolocstr
   value:
-    0: Grosser Skelettkrieger
+    0: Skelettschütze
 Gender: {type: byte, value: 4}
 GoodEvil: {type: byte, value: 0}
-HitPoints: {type: short, value: 24}
+HitPoints: {type: short, value: 12}
 Int: {type: byte, value: 10}
 Interruptable: {type: byte, value: 1}
 IsImmortal: {type: byte, value: 0}
@@ -62,14 +62,14 @@ LastName:
     4: ''
 LawfulChaotic: {type: byte, value: 50}
 Lootable: {type: byte, value: 0}
-MaxHitPoints: {type: short, value: 24}
+MaxHitPoints: {type: short, value: 12}
 NaturalAC: {type: byte, value: 2}
 NoPermDeath: {type: byte, value: 1}
 PaletteID: {type: byte, value: 31}
 PerceptionRange: {type: byte, value: 11}
 Phenotype: {type: int, value: 0}
 Plot: {type: byte, value: 0}
-PortraitId: {type: word, value: 292}
+PortraitId: {type: word, value: 289}
 Race: {type: byte, value: 24}
 ScriptAttacked: {type: resref, value: x2_def_attacked}
 ScriptDamaged: {type: resref, value: x2_def_ondamage}
@@ -90,14 +90,14 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 5}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 4}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 4}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -121,15 +121,15 @@ SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 21}
+Str: {type: byte, value: 10}
 Subrace: {type: cexostr, value: ''}
-Tag: {type: cexostr, value: skel_large_war}
-Tail_New: {type: dword, value: 277}
+Tag: {type: cexostr, value: skel_med_ar}
+Tail_New: {type: dword, value: 0}
 TemplateList:
   type: list
   value: []
-TemplateResRef: {type: resref, value: skel_large_war}
-WalkRate: {type: int, value: 5}
+TemplateResRef: {type: resref, value: skel_med_ar}
+WalkRate: {type: int, value: 7}
 Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
