--- a/mod/utc/skel_med_ar6hd.utc.yml
+++ b/mod/utc/skel_med_ar6hd.utc.yml
@@ -1,39 +1,40 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 1317}
+Appearance_Type: {type: word, value: 70}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: 1}
 Cha: {type: byte, value: 3}
-ChallengeRating: {type: float, value: 4.0}
+ChallengeRating: {type: float, value: 8.0}
 ClassList:
   type: list
   value:
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 2
     Class: {type: int, value: 19}
-    ClassLevel: {type: short, value: 2}
+    ClassLevel: {type: short, value: 6}
 Comment: {type: cexostr, value: ''}
 Con: {type: byte, value: 10}
 Conversation: {type: resref, value: ''}
-CurrentHitPoints: {type: short, value: 24}
+CurrentHitPoints: {type: short, value: 72}
 DecayTime: {type: dword, value: 5000}
 Deity: {type: cexostr, value: ''}
 Description:
   type: cexolocstr
   value: {}
-Dex: {type: byte, value: 12}
+Dex: {type: byte, value: 18}
 Disarmable: {type: byte, value: 1}
 Equip_ItemList:
   type: list
   value:
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 2, EquippedRes: {type: resref, value: lederruestung012}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16, EquippedRes: {type: resref, value: krummsaeb004}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32, EquippedRes: {type: resref, value: grosserschild032}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 2, EquippedRes: {type: resref, value: nw_aarcl001}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16, EquippedRes: {type: resref, value: nw_wbwln001}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 2048, EquippedRes: {type: resref,
+      value: nw_wamar001}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16384, EquippedRes: {type: resref,
-      value: nw_it_crewpsp005}}
+      value: nw_it_crewpsp026}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32768, EquippedRes: {type: resref,
-      value: nw_it_crewpsp005}}
+      value: nw_it_crewpsp026}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 131072, EquippedRes: {type: resref,
       value: it_creitemune001}}
 FactionID: {type: word, value: 1}
@@ -48,10 +49,10 @@ FeatList:
 FirstName:
   type: cexolocstr
   value:
-    0: Grosser Skelettkrieger
+    0: Skelettschütze
 Gender: {type: byte, value: 4}
 GoodEvil: {type: byte, value: 0}
-HitPoints: {type: short, value: 24}
+HitPoints: {type: short, value: 72}
 Int: {type: byte, value: 10}
 Interruptable: {type: byte, value: 1}
 IsImmortal: {type: byte, value: 0}
@@ -62,7 +63,7 @@ LastName:
     4: ''
 LawfulChaotic: {type: byte, value: 50}
 Lootable: {type: byte, value: 0}
-MaxHitPoints: {type: short, value: 24}
+MaxHitPoints: {type: short, value: 72}
 NaturalAC: {type: byte, value: 2}
 NoPermDeath: {type: byte, value: 1}
 PaletteID: {type: byte, value: 31}
@@ -90,7 +91,7 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 5}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 9}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -121,15 +122,15 @@ SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 21}
+Str: {type: byte, value: 10}
 Subrace: {type: cexostr, value: ''}
-Tag: {type: cexostr, value: skel_large_war}
-Tail_New: {type: dword, value: 277}
+Tag: {type: cexostr, value: skel_med_ar6hd}
+Tail_New: {type: dword, value: 0}
 TemplateList:
   type: list
   value: []
-TemplateResRef: {type: resref, value: skel_large_war}
-WalkRate: {type: int, value: 5}
+TemplateResRef: {type: resref, value: skel_med_ar6hd}
+WalkRate: {type: int, value: 7}
 Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
