--- a/mod/utc/zombie_huge.utc.yml
+++ b/mod/utc/zombie_huge.utc.yml
@@ -1,11 +1,11 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 198}
+Appearance_Type: {type: word, value: 1322}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: -2}
 Cha: {type: byte, value: 3}
-ChallengeRating: {type: float, value: 4.0}
+ChallengeRating: {type: float, value: 7.0}
 ClassList:
   type: list
   value:
@@ -16,20 +16,18 @@ ClassList:
 Comment: {type: cexostr, value: ''}
 Con: {type: byte, value: 10}
 Conversation: {type: resref, value: ''}
-CurrentHitPoints: {type: short, value: 99}
+CurrentHitPoints: {type: short, value: 96}
 DecayTime: {type: dword, value: 5000}
 Deity: {type: cexostr, value: ''}
 Description:
   type: cexolocstr
   value: {}
-Dex: {type: byte, value: 8}
+Dex: {type: byte, value: 6}
 Disarmable: {type: byte, value: 1}
 Equip_ItemList:
   type: list
   value:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16384, EquippedRes: {type: resref,
-      value: nw_it_crewpb015}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32768, EquippedRes: {type: resref,
       value: nw_it_crewpb015}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 131072, EquippedRes: {type: resref,
       value: it_creitemunf001}}
@@ -37,14 +35,15 @@ FactionID: {type: word, value: 1}
 FeatList:
   type: list
   value:
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 40}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 289}}
 FirstName:
   type: cexolocstr
   value:
-    0: Zombie
+    0: Riesiger Zombie
 Gender: {type: byte, value: 0}
 GoodEvil: {type: byte, value: 0}
-HitPoints: {type: short, value: 99}
+HitPoints: {type: short, value: 96}
 Int: {type: byte, value: 10}
 Interruptable: {type: byte, value: 1}
 IsImmortal: {type: byte, value: 0}
@@ -55,14 +54,14 @@ LastName:
     4: ''
 LawfulChaotic: {type: byte, value: 50}
 Lootable: {type: byte, value: 0}
-MaxHitPoints: {type: short, value: 99}
-NaturalAC: {type: byte, value: 2}
+MaxHitPoints: {type: short, value: 104}
+NaturalAC: {type: byte, value: 4}
 NoPermDeath: {type: byte, value: 1}
 PaletteID: {type: byte, value: 33}
 PerceptionRange: {type: byte, value: 11}
 Phenotype: {type: int, value: 0}
 Plot: {type: byte, value: 0}
-PortraitId: {type: word, value: 353}
+PortraitId: {type: word, value: 356}
 Race: {type: byte, value: 24}
 ScriptAttacked: {type: resref, value: x2_def_attacked}
 ScriptDamaged: {type: resref, value: x2_def_ondamage}
@@ -90,7 +89,8 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 4}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -113,16 +113,16 @@ SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 21}
+Str: {type: byte, value: 27}
 Subrace: {type: cexostr, value: ''}
 Tag: {type: cexostr, value: zombie_huge}
-Tail: {type: byte, value: 0}
+Tail_New: {type: dword, value: 282}
 TemplateList:
   type: list
   value: []
 TemplateResRef: {type: resref, value: zombie_huge}
-WalkRate: {type: int, value: 2}
-Wings: {type: byte, value: 0}
+WalkRate: {type: int, value: 4}
+Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
 refbonus: {type: short, value: 0}
