--- a/mod/utc/zombie_huge12hd.utc.yml
+++ b/mod/utc/zombie_huge12hd.utc.yml
@@ -1,57 +1,49 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 1317}
+Appearance_Type: {type: word, value: 1322}
 BodyBag: {type: byte, value: 0}
-CRAdjust: {type: int, value: 1}
+CRAdjust: {type: int, value: -2}
 Cha: {type: byte, value: 3}
-ChallengeRating: {type: float, value: 4.0}
+ChallengeRating: {type: float, value: 11.0}
 ClassList:
   type: list
   value:
   - !nwn-lib.elv.es,2013-07:struct
     __struct_id: 2
     Class: {type: int, value: 19}
-    ClassLevel: {type: short, value: 2}
+    ClassLevel: {type: short, value: 12}
 Comment: {type: cexostr, value: ''}
 Con: {type: byte, value: 10}
 Conversation: {type: resref, value: ''}
-CurrentHitPoints: {type: short, value: 24}
+CurrentHitPoints: {type: short, value: 144}
 DecayTime: {type: dword, value: 5000}
 Deity: {type: cexostr, value: ''}
 Description:
   type: cexolocstr
   value: {}
-Dex: {type: byte, value: 12}
+Dex: {type: byte, value: 6}
 Disarmable: {type: byte, value: 1}
 Equip_ItemList:
   type: list
   value:
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 2, EquippedRes: {type: resref, value: lederruestung012}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16, EquippedRes: {type: resref, value: krummsaeb004}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32, EquippedRes: {type: resref, value: grosserschild032}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16384, EquippedRes: {type: resref,
-      value: nw_it_crewpsp005}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32768, EquippedRes: {type: resref,
-      value: nw_it_crewpsp005}}
+      value: nw_it_crewpb015}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 131072, EquippedRes: {type: resref,
-      value: it_creitemune001}}
+      value: it_creitemunf001}}
 FactionID: {type: word, value: 1}
 FeatList:
   type: list
   value:
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 3}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 32}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 40}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 289}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 45}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 377}}
 FirstName:
   type: cexolocstr
   value:
-    0: Grosser Skelettkrieger
-Gender: {type: byte, value: 4}
+    0: Riesiger Zombie
+Gender: {type: byte, value: 0}
 GoodEvil: {type: byte, value: 0}
-HitPoints: {type: short, value: 24}
+HitPoints: {type: short, value: 144}
 Int: {type: byte, value: 10}
 Interruptable: {type: byte, value: 1}
 IsImmortal: {type: byte, value: 0}
@@ -62,14 +54,14 @@ LastName:
     4: ''
 LawfulChaotic: {type: byte, value: 50}
 Lootable: {type: byte, value: 0}
-MaxHitPoints: {type: short, value: 24}
-NaturalAC: {type: byte, value: 2}
+MaxHitPoints: {type: short, value: 156}
+NaturalAC: {type: byte, value: 4}
 NoPermDeath: {type: byte, value: 1}
-PaletteID: {type: byte, value: 31}
+PaletteID: {type: byte, value: 33}
 PerceptionRange: {type: byte, value: 11}
 Phenotype: {type: int, value: 0}
 Plot: {type: byte, value: 0}
-PortraitId: {type: word, value: 292}
+PortraitId: {type: word, value: 356}
 Race: {type: byte, value: 24}
 ScriptAttacked: {type: resref, value: x2_def_attacked}
 ScriptDamaged: {type: resref, value: x2_def_ondamage}
@@ -90,7 +82,7 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 5}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 15}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -116,20 +108,20 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-SoundSetFile: {type: word, value: 79}
+SoundSetFile: {type: word, value: 109}
 SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 21}
+Str: {type: byte, value: 28}
 Subrace: {type: cexostr, value: ''}
-Tag: {type: cexostr, value: skel_large_war}
-Tail_New: {type: dword, value: 277}
+Tag: {type: cexostr, value: zombie_huge12hd}
+Tail_New: {type: dword, value: 283}
 TemplateList:
   type: list
   value: []
-TemplateResRef: {type: resref, value: skel_large_war}
-WalkRate: {type: int, value: 5}
+TemplateResRef: {type: resref, value: zombie_huge12hd}
+WalkRate: {type: int, value: 4}
 Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
