--- a/mod/utc/zombie_medium.utc.yml
+++ b/mod/utc/zombie_medium.utc.yml
@@ -1,7 +1,7 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 198}
+Appearance_Type: {type: word, value: 195}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: 0}
 Cha: {type: byte, value: 3}
@@ -16,7 +16,7 @@ ClassList:
 Comment: {type: cexostr, value: ''}
 Con: {type: byte, value: 10}
 Conversation: {type: resref, value: ''}
-CurrentHitPoints: {type: short, value: 27}
+CurrentHitPoints: {type: short, value: 24}
 DecayTime: {type: dword, value: 5000}
 Deity: {type: cexostr, value: ''}
 Description:
@@ -29,14 +29,13 @@ Equip_ItemList:
   value:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 16384, EquippedRes: {type: resref,
       value: nw_it_crewpb005}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 32768, EquippedRes: {type: resref,
-      value: nw_it_crewpb005}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 131072, EquippedRes: {type: resref,
       value: it_creitemunf001}}
 FactionID: {type: word, value: 1}
 FeatList:
   type: list
   value:
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 40}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 1, Feat: {type: word, value: 289}}
 FirstName:
   type: cexolocstr
@@ -44,7 +43,7 @@ FirstName:
     0: Zombie
 Gender: {type: byte, value: 0}
 GoodEvil: {type: byte, value: 0}
-HitPoints: {type: short, value: 27}
+HitPoints: {type: short, value: 24}
 Int: {type: byte, value: 10}
 Interruptable: {type: byte, value: 1}
 IsImmortal: {type: byte, value: 0}
@@ -55,14 +54,14 @@ LastName:
     4: ''
 LawfulChaotic: {type: byte, value: 50}
 Lootable: {type: byte, value: 0}
-MaxHitPoints: {type: short, value: 27}
+MaxHitPoints: {type: short, value: 26}
 NaturalAC: {type: byte, value: 2}
 NoPermDeath: {type: byte, value: 1}
 PaletteID: {type: byte, value: 33}
 PerceptionRange: {type: byte, value: 11}
 Phenotype: {type: int, value: 0}
 Plot: {type: byte, value: 0}
-PortraitId: {type: word, value: 353}
+PortraitId: {type: word, value: 354}
 Race: {type: byte, value: 24}
 ScriptAttacked: {type: resref, value: x2_def_attacked}
 ScriptDamaged: {type: resref, value: x2_def_ondamage}
@@ -83,7 +82,7 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
-  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 4}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 5}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -91,6 +90,7 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 4}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
@@ -113,16 +113,16 @@ SpecAbilityList:
   type: list
   value: []
 StartingPackage: {type: byte, value: 81}
-Str: {type: byte, value: 13}
+Str: {type: byte, value: 16}
 Subrace: {type: cexostr, value: ''}
 Tag: {type: cexostr, value: zombie_medium}
-Tail: {type: byte, value: 0}
+Tail_New: {type: dword, value: 0}
 TemplateList:
   type: list
   value: []
 TemplateResRef: {type: resref, value: zombie_medium}
-WalkRate: {type: int, value: 2}
-Wings: {type: byte, value: 0}
+WalkRate: {type: int, value: 3}
+Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
 refbonus: {type: short, value: 0}
