--- a/mod/utc/zombie_small.utc.yml
+++ b/mod/utc/zombie_small.utc.yml
@@ -1,7 +1,7 @@
 --- !nwn-lib.elv.es,2013-07:struct
 __data_type: UTC
 __struct_id: 4294967295
-Appearance_Type: {type: word, value: 198}
+Appearance_Type: {type: word, value: 1329}
 BodyBag: {type: byte, value: 0}
 CRAdjust: {type: int, value: 0}
 Cha: {type: byte, value: 3}
@@ -41,7 +41,7 @@ FeatList:
 FirstName:
   type: cexolocstr
   value:
-    0: Zombie
+    0: Kleiner Zombie
 Gender: {type: byte, value: 0}
 GoodEvil: {type: byte, value: 0}
 HitPoints: {type: short, value: 15}
@@ -108,6 +108,7 @@ SkillList:
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
   - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
+  - !nwn-lib.elv.es,2013-07:struct {__struct_id: 0, Rank: {type: byte, value: 0}}
 SoundSetFile: {type: word, value: 109}
 SpecAbilityList:
   type: list
@@ -116,13 +117,13 @@ StartingPackage: {type: byte, value: 81}
 Str: {type: byte, value: 11}
 Subrace: {type: cexostr, value: ''}
 Tag: {type: cexostr, value: zombie_small}
-Tail: {type: byte, value: 0}
+Tail_New: {type: dword, value: 280}
 TemplateList:
   type: list
   value: []
 TemplateResRef: {type: resref, value: zombie_small}
 WalkRate: {type: int, value: 2}
-Wings: {type: byte, value: 0}
+Wings_New: {type: dword, value: 0}
 Wis: {type: byte, value: 10}
 fortbonus: {type: short, value: 0}
 refbonus: {type: short, value: 0}
